fix event topic details alignment on mobile

--- a/assets/stylesheets/mobile/events.scss
+++ b/assets/stylesheets/mobile/events.scss
@@ -61,6 +61,12 @@
   }
 }
 
+.event-date-mobile {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+
 .topic-list-item .date-time-container {
   margin-bottom: 6px;
 
